# philologus-actix-web

./: .eslintrc.js  .gitignore  Cargo.toml  Dockerfile  README.md  dockerfile  package-lock.json  package.json
.github/workflows/: rust.yml
src/: cetest.html  db.rs  greek-synopsis.html  latin-synopsis.html  main.rs  pp.txt  synopsis.html  synopsis.rs
static/: defjson.js  greek-synopsis.html  hoplitechallengeprivacy.html  hoplitekb.oxt  hoplitekb.wasm  hoplitekb_wasm_rs.js  hoplitekb_wasm_rs_bg.wasm  hoplitekeyboard.html  hoplitekeyboardprivacy.html  index.html  indexorig.html  philologusprivacyAndroid.html  philologusprivacyiOS.html  support.html  synopsis.html  wordtree.js
static/assets/: index-CGhkubon.js  index-t7N2l-N7.css
