[package]
name = "philologus-actix-web"
version = "2.0.17"
authors = ["Jeremy March <jmarch@gradcenter.cuny.edu>"]
edition = "2021"

[dependencies]
actix-web = { version = "4.5.1" }
actix-files = "0.6.5"
unicode-normalization = { version = "0.1.23", default-features = false }
env_logger = "0.11.2"
chrono = "0.4.34"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio-rustls", "any", "macros"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
regex = "1.10.3"
percent-encoding = "2.3.1"
thiserror = "1.0.57"
tantivy = "0.19.2" #0.21.1
tracing-actix-web = "0.7.9"
tracing = { version = "0.1.40", features = ["log"] }
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
# polytonic-greek = { git = "https://github.com/jeremymarch/polytonic-greek", version = "0.4.6" }
hoplite_verbs_rs = { git = "https://github.com/jeremymarch/hoplite_verbs_rs", version = "0.3.9" }


[dev-dependencies]
actix-rt = "2.9.0"
urlencoding = "2.1.3"

[profile.release]
opt-level = 3
lto = true
