[package]
name = "philologus-actix-web"
version = "2.0.18"
authors = ["Jeremy March <jmarch@gradcenter.cuny.edu>"]
edition = "2021"

[dependencies]
actix-web = { version = "4.9.0" }
actix-files = "0.6.6"
unicode-normalization = { version = "0.1.23", default-features = false }
env_logger = "0.11.5"
chrono = "0.4.38"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-rustls", "any", "macros"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
regex = "1.11.0"
percent-encoding = "2.3.1"
thiserror = "1.0.64"
tantivy = "0.22.0" #0.21.1
tracing-actix-web = "0.7.13"
tracing = { version = "0.1.40", features = ["log"] }
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
# polytonic-greek = { git = "https://github.com/jeremymarch/polytonic-greek", version = "0.4.6" }
hoplite_verbs_rs = { git = "https://github.com/jeremymarch/hoplite_verbs_rs", version = "0.5.1" }
# hoplite_verbs_rs = { path = "../hoplite_verbs_rs" }


[dev-dependencies]
actix-rt = "2.9.0"
urlencoding = "2.1.3"

[profile.release]
opt-level = 3
lto = true
