[package]
name = "philologus-actix-web"
version = "2.0.28"
authors = ["Jeremy March <jmarch@gradcenter.cuny.edu>"]
edition = "2021"

[dependencies]
actix-web = { version = "4.12.1" }
actix-files = "0.6.10"
unicode-normalization = { version = "0.1.25", default-features = false }
env_logger = "0.11.8"
chrono = "0.4.43"
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "any",
    "macros",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
regex = "1.12.3"
percent-encoding = "2.3.2"
thiserror = "2.0.18"
tantivy = "0.22.0" #0.21.1
tracing-actix-web = "0.7.21"
tracing = { version = "0.1.44", features = ["log"] }
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
# polytonic-greek = { git = "https://github.com/jeremymarch/polytonic-greek", version = "0.4.6" }
hoplite_verbs_rs = { git = "https://github.com/jeremymarch/hoplite_verbs_rs", version = "0.5.1" }
# hoplite_verbs_rs = { path = "../hoplite_verbs_rs" }


[dev-dependencies]
actix-rt = "2.11.0"
urlencoding = "2.1.3"

[profile.release]
opt-level = 3
lto = true
